force-app/main/default/objects/Opportunity/fields/Add2Months__c.field-meta.xml
<CustomField>
    <fullName>Add2Months__c</fullName>
    <formula>DATE (YEAR( CloseDate ) + 2,  MONTH( CloseDate ) +3,  DAY( CloseDate )  + 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add2Months</label>
    <type>Date</type>
</CustomField>