force-app/main/default/objects/Opportunity/fields/Commission_is_Greater_Than_Or_Equal_to__c.field-meta.xml
<CustomField>
    <fullName>Commission_is_Greater_Than_Or_Equal_to__c</fullName>
    <formula>IF(   Commission__c  &gt;= 20000, &apos;Great Job&apos;, &apos;Could be better&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission is Greater Than Or Equal to $</label>
    <type>Text</type>
</CustomField>