force-app/main/default/objects/Opportunity/fields/DateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>DateTimeValue__c</fullName>
    <formula>DATETIMEVALUE( CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateTimeValue</label>
    <type>DateTime</type>
</CustomField>