force-app/main/default/objects/Opportunity/fields/DateValue__c.field-meta.xml
<CustomField>
    <fullName>DateValue__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateValue</label>
    <type>Date</type>
</CustomField>