force-app/main/default/objects/Opportunity/fields/ExpRev__c.field-meta.xml
<CustomField>
    <fullName>ExpRev__c</fullName>
    <formula>Amount  *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExpRev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>