force-app/main/default/objects/Opportunity/fields/NoOfDaysToClose__c.field-meta.xml
<CustomField>
    <fullName>NoOfDaysToClose__c</fullName>
    <formula>CloseDate  -  Today__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NoOfDaysToClose</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>