force-app/main/default/objects/Opportunity/fields/OneMonthToClose__c.field-meta.xml
<CustomField>
    <fullName>OneMonthToClose__c</fullName>
    <formula>ADDMONTHS( CloseDate ,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OneMonthToClose</label>
    <type>Date</type>
</CustomField>