force-app/main/default/objects/Opportunity/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>Order Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>