force-app/main/default/objects/Opportunity/fields/Sales_price__c.field-meta.xml
<CustomField>
    <fullName>Sales_price__c</fullName>
    <formula>IF( Amount &gt;1000000, &apos;Large Deal&apos; , &apos;Small Deal&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales price</label>
    <type>Text</type>
</CustomField>