force-app/main/default/objects/Opportunity/fields/StaticDate__c.field-meta.xml
<CustomField>
    <fullName>StaticDate__c</fullName>
    <formula>DATE(2023,3,25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StaticDate</label>
    <type>Date</type>
</CustomField>