force-app/main/default/objects/Opportunity/validationRules/OpportunityAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityAmount</fullName>
    <active>true</active>
    <description>If the Stage is &apos;Closed Lost&apos;, &apos;Amount&apos; can not be empty</description>
    <errorConditionFormula>IF( ISPICKVAL( StageName , &apos;Closed Lost&apos;) ,  ISBLANK( Amount ) , false)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>If the Stage is &apos;Closed Lost&apos;, &apos;Amount&apos; can not be empty</errorMessage>
</ValidationRule>