force-app/main/default/objects/Opportunity/validationRules/OpportunityAmount2.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityAmount2</fullName>
    <active>true</active>
    <description>Opportunity Amount must be positive and no more than $10 million</description>
    <errorConditionFormula>AND(ISNEW(), OR(Amount  &lt; 10000000,Amount  &gt; 100000))</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Opportunity Amount must be positive and no more than $10 million</errorMessage>
</ValidationRule>