force-app/main/default/objects/Opportunity/validationRules/OrderNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderNumber</fullName>
    <active>true</active>
    <description>Order Number must be non-negative even number</description>
    <errorConditionFormula>OR( OrderNumber__c  &lt; 0, MOD( OrderNumber__c ,2)==1)</errorConditionFormula>
    <errorDisplayField>OrderNumber__c</errorDisplayField>
    <errorMessage>Order Number must be non-negative even number</errorMessage>
</ValidationRule>